[package]
name = "multi-stat-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
simple_logger = "4.0.0"
sysinfo = {version = "0.29.8", default-features = false}
nvml-wrapper = "0.9.0"