
[workspace]
members = [
    "src\\main.rs",
]

[package]
name = "multi-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = {version = "0.29.8", default-features = false}
nvml-wrapper = "0.9.0"
macroquad = "0.4.0"
tokio = { version = "1", features = ["full"] }

